--- a/paimon-e2e-tests/pom.xml
+++ b/paimon-e2e-tests/pom.xml
@@ -248,33 +248,34 @@ under the License.
                     </artifactItems>
                 </configuration>
             </plugin>
-
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
+                <artifactId>maven-antrun-plugin</artifactId>
                 <executions>
                     <execution>
                         <id>FLINK-31695</id>
                         <phase>process-resources</phase>
                         <goals>
-                            <goal>exec</goal>
+                            <goal>run</goal>
                         </goals>
+                        <configuration>
+                            <!--
+                            Due to FLINK-31695, we need to delete conflicting classes from jar file.
+                            Remove this work-around after we make our own e2e docker image,
+                            with both Flink and Hadoop in the same docker.
+                            -->
+                            <target>
+                                <!-- Unzip the jar file to a temporary directory -->
+                                <unzip src="/tmp/paimon-e2e-tests-jars/bundled-hadoop.jar" dest="target/temp"/>
+                                <!-- Delete the conflicting file -->
+                                <delete file="target/temp/org/apache/commons/cli/CommandLine.class"/>
+                                <!-- Repackage the modified content -->
+                                <zip destfile="/tmp/paimon-e2e-tests-jars/bundled-hadoop.jar" basedir="target/temp"/>
+                                <!-- Delete the extracted temporary folder -->
+                                <delete dir="target/temp"/>
+                            </target>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <!--
-                    Due to FLINK-31695, we need to delete conflicting classes from jar file.
-                    Remove this work-around after we make our own e2e docker image,
-                    with both Flink and Hadoop in the same docker.
-                    -->
-                    <executable>zip</executable>
-                    <arguments>
-                        <argument>-d</argument>
-                        <argument>/tmp/paimon-e2e-tests-jars/bundled-hadoop.jar</argument>
-                        <argument>org/apache/commons/cli/CommandLine.class</argument>
-                    </arguments>
-                </configuration>
             </plugin>
         </plugins>
 
