--- a/.github/workflows/e2e-tests-flink-jdk11.yml
+++ b/.github/workflows/e2e-tests-flink-jdk11.yml
@@ -52,7 +52,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build Flink
-        run:  mvn -T 1C -B clean install -DskipTests -pl paimon-e2e-tests -am
+        run:  mvn -T 1C -B clean install -DskipTests -pl paimon-e2e-tests -am -Pflink-${{ matrix.flink_version }},java11
 
       - name: Test Flink
         run: |
@@ -62,9 +62,9 @@ jobs:
           echo "JVM timezone is set to $jvm_timezone"
           profile="flink-${{ matrix.flink_version }}"
           if [ "${{ matrix.flink_version }}" = "${{ matrix.flink_version[-1] }}" ]; then
-            mvn -T 1C -B test -pl paimon-e2e-tests -Duser.timezone=$jvm_timezone
+            mvn -T 1C -B test -pl paimon-e2e-tests -Duser.timezone=$jvm_timezone -Pjava11
           else
-            mvn -T 1C -B test -pl paimon-e2e-tests -Duser.timezone=$jvm_timezone -P${profile}
+            mvn -T 1C -B test -pl paimon-e2e-tests -Duser.timezone=$jvm_timezone -P${profile},java11
           fi
         env:
           MAVEN_OPTS: -Xmx4096m
