5235: Support for Google Cloud Storage

--- a/paimon-filesystems/pom.xml
+++ b/paimon-filesystems/pom.xml
@@ -39,6 +39,8 @@
         <module>paimon-s3-impl</module>
         <module>paimon-cosn</module>
         <module>paimon-cosn-impl</module>
+        <module>paimon-gs</module>
+        <module>paimon-gs-impl</module>
     </modules>
 
     <properties>
