5235: Support for Google Cloud Storage

--- a/paimon-filesystems/pom.xml
+++ b/paimon-filesystems/pom.xml
@@ -40,6 +40,8 @@
         <module>paimon-cosn</module>
         <module>paimon-cosn-impl</module>
         <module>paimon-jindo</module>
+        <module>paimon-gs</module>
+        <module>paimon-gs-impl</module>
     </modules>
 
     <properties>
