[core] Add comments to partition methods in Catalog

--- a/paimon-open-api/rest-catalog-open-api.yaml
+++ b/paimon-open-api/rest-catalog-open-api.yaml
@@ -622,7 +622,7 @@ paths:
     post:
       tags:
         - partition
-      summary: Create partitions
+      summary: Create partitions, ignore existing partitions
       operationId: createPartitions
       parameters:
         - name: prefix
@@ -660,7 +660,7 @@ paths:
     post:
       tags:
         - partition
-      summary: Drop partitions
+      summary: Drop partitions, ignore non-existent partitions
       operationId: dropPartitions
       parameters:
         - name: prefix
@@ -698,7 +698,7 @@ paths:
     post:
       tags:
         - partition
-      summary: Alter partitions
+      summary: Alter partitions, for non-existent partitions, partitions will be created directly
       operationId: alterPartitions
       parameters:
         - name: prefix
@@ -736,7 +736,7 @@ paths:
     post:
       tags:
         - partition
-      summary: MarkDone partitions
+      summary: MarkDone partitions, for non-existent partitions, partitions will be created directly
       operationId: markDonePartitions
       parameters:
         - name: prefix
