[core][rest] Remove partition modification method in RESTCatalog

--- a/paimon-open-api/rest-catalog-open-api.yaml
+++ b/paimon-open-api/rest-catalog-open-api.yaml
@@ -630,119 +630,6 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
         "500":
           description: Internal Server Error
-    post:
-      tags:
-        - partition
-      summary: Create partitions, ignore existing partitions
-      operationId: createPartitions
-      parameters:
-        - name: prefix
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: database
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: table
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/CreatePartitionsRequest'
-      responses:
-        "200":
-          description: Success, no content
-        "404":
-          description: Resource not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        "500":
-          description: Internal Server Error
-  /v1/{prefix}/databases/{database}/tables/{table}/partitions/drop:
-    post:
-      tags:
-        - partition
-      summary: Drop partitions, ignore non-existent partitions
-      operationId: dropPartitions
-      parameters:
-        - name: prefix
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: database
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: table
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/DropPartitionsRequest'
-      responses:
-        "200":
-          description: Success, no content
-        "404":
-          description: Resource not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        "500":
-          description: Internal Server Error
-  /v1/{prefix}/databases/{database}/tables/{table}/partitions/alter:
-    post:
-      tags:
-        - partition
-      summary: Alter partitions, for non-existent partitions, partitions will be created directly
-      operationId: alterPartitions
-      parameters:
-        - name: prefix
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: database
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: table
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AlterPartitionsRequest'
-      responses:
-        "200":
-          description: Success, no content
-        "404":
-          description: Resource not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
-        "500":
-          description: Internal Server Error
   /v1/{prefix}/databases/{database}/tables/{table}/partitions/mark:
     post:
       tags:
@@ -1480,7 +1367,7 @@ components:
         statistics:
           type: array
           items:
-            $ref: '#/components/schemas/Partition'
+            $ref: '#/components/schemas/PartitionStatistics'
     Snapshot:
       type: object
       properties:
@@ -1727,6 +1614,25 @@ components:
           additionalProperties:
             type: string
     Partition:
+      type: object
+      properties:
+        spec:
+          type: object
+        recordCount:
+          type: integer
+          format: int64
+        fileSizeInBytes:
+          type: integer
+          format: int64
+        fileCount:
+          type: integer
+          format: int64
+        lastFileCreationTime:
+          type: integer
+          format: int64
+        done:
+          type: boolean
+    PartitionStatistics:
       type: object
       properties:
         spec:
