--- a/paimon-open-api/rest-catalog-open-api.yaml
+++ b/paimon-open-api/rest-catalog-open-api.yaml
@@ -508,6 +508,54 @@ paths:
                 $ref: '#/components/schemas/ErrorResponse'
         "500":
           description: Internal Server Error
+  /v1/{prefix}/databases/{database}/tables/{table}/rollback/id:
+    post:
+      tags:
+        - table
+      summary: Rollback table by snapshot id
+      operationId: rollbackTableById
+      parameters:
+        - name: prefix
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: database
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: table
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RollbackTableBySnapshotIdRequest'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RollbackTableResponse'
+        "404":
+          description: Resource not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        "409":
+          description: Resource has exist
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        "500":
+          description: Internal Server Error
   /v1/{prefix}/databases/{database}/tables/{table}/token:
     get:
       tags:
@@ -1370,14 +1418,18 @@ components:
     CommitTableRequest:
       type: object
       properties:
-        identifier:
-          $ref: '#/components/schemas/Identifier'
         snapshot:
           $ref: '#/components/schemas/Snapshot'
         statistics:
           type: array
           items:
             $ref: '#/components/schemas/PartitionStatistics'
+    RollbackTableBySnapshotIdRequest:
+      type: object
+      properties:
+        snapshotId:
+          type: integer
+          format: int64
     Snapshot:
       type: object
       properties:
@@ -1447,6 +1499,11 @@ components:
           type: integer
           format: int64
     CommitTableResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+    RollbackTableResponse:
       type: object
       properties:
         success:
