--- a/paimon-open-api/rest-catalog-open-api.yaml
+++ b/paimon-open-api/rest-catalog-open-api.yaml
@@ -100,11 +100,7 @@ paths:
               $ref: '#/components/schemas/CreateDatabaseRequest'
       responses:
         "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/CreateDatabaseResponse'
+          description: Success, no content
         "409":
           description: Resource has exist
           content:
@@ -1217,8 +1213,6 @@ components:
           format: int64
         schema:
           $ref: '#/components/schemas/Schema'
-        uuid:
-          type: string
         owner:
           type: string
         createdAt:
